mp/Maneuver: Fix Java9+ deprecation for new Double.